add final version

--- a/App/templates/App/backend.html
+++ b/App/templates/App/backend.html
@@ -9,22 +9,48 @@
 <!-- Page content -->
 {% block content %}
 <section class="page-section cta">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <div class="cta-inner text-center rounded">
-            <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">
-                <h1 class="h1">Nuestra promesa para ti...
-                  <span>&#160;</span>
-                </h1>
-              </span>
-            </h2>
-            <br> 
-            <p class="mb-0"><br> Ya que te encuentras interesado en nuestros servicios, es primordial decirte que no te equivocaste, nuestra principal misión es crear un producto de la mayor calidad con gran empeño y actitud. </p>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <div class="cta-inner text-center rounded">
+          <h2 class="section-heading mb-4">
+            <span class="section-heading-upper">
+              <h1 class="h1">
+                Graduate System El Bosque :)
+                <span>&#160;</span>
+              </h1>
+            </span>
+          </h2>
+          <br />
+          <p class="mb-0 mt-4">
+
+            Here, you will find the perfect hub for talent, opportunities, and
+            professional growth. We invite you to become part of our community
+            of outstanding alumni who have made their mark in the world. At
+            ConnectUB, you can: Connect with inspiring mentors: Access a network
+            of successful graduates and industry leaders willing to share their
+            knowledge and experience with you. Gain valuable insights and advice
+            to advance your career and achieve new goals. Explore exclusive job
+            opportunities: Discover high-level jobs, internships, and
+            challenging projects in leading companies. Thanks to our strategic
+            partnerships, you'll have access to select job offers and the chance
+            to stand out in the competitive professional world. Upgrade your
+            skills: Take advantage of our professional training and development
+            programs designed to boost your skills and keep you up-to-date in
+            your field. From online courses to in-person workshops, we provide
+            the necessary tools to excel in your area of expertise. Join
+            exclusive events: Attend conferences, panels, and special activities
+            organized by El Bosque University and collaborating companies.
+            Connect with experts from different sectors, expand your network,
+            and stay informed about the latest trends and opportunities. Access
+            premium resources: Browse through our extensive library of
+            resources, including articles, research papers, and success stories,
+            to broaden your knowledge and develop an innovative entrepreneurial
+            mindset.
+          </p>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 {% endblock content %}
