--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -60,9 +60,9 @@
             </ul>
           </li>
           <li class="item has-submenu">
-            <a id="a" tabindex="0">Work</a>
+            <a id="a" tabindex="0">Work History</a>
             <ul class="submenu">
-              <li class="subitem"><a href="{% url 'ciudad_list' %}">Work History</a></li>
+              <li class="subitem"><a href="{% url 'laboral_list' %}">Work History</a></li>
               <li class="subitem"><a href="{% url 'empresa_list' %}">Companies</a></li>
             </ul>
           </li>
