--- a/App/templates/App/backend.html
+++ b/App/templates/App/backend.html
@@ -16,38 +16,32 @@
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">
               <h1 class="h1">
-                Graduate System El Bosque :)
+                Table Master U El Bosque :
                 <span>&#160;</span>
               </h1>
             </span>
           </h2>
           <br />
-          <p class="mb-0 mt-4">
-
-            Here, you will find the perfect hub for talent, opportunities, and
-            professional growth. We invite you to become part of our community
-            of outstanding alumni who have made their mark in the world. At
-            ConnectUB, you can: Connect with inspiring mentors: Access a network
-            of successful graduates and industry leaders willing to share their
-            knowledge and experience with you. Gain valuable insights and advice
-            to advance your career and achieve new goals. Explore exclusive job
-            opportunities: Discover high-level jobs, internships, and
-            challenging projects in leading companies. Thanks to our strategic
-            partnerships, you'll have access to select job offers and the chance
-            to stand out in the competitive professional world. Upgrade your
-            skills: Take advantage of our professional training and development
-            programs designed to boost your skills and keep you up-to-date in
-            your field. From online courses to in-person workshops, we provide
-            the necessary tools to excel in your area of expertise. Join
-            exclusive events: Attend conferences, panels, and special activities
-            organized by El Bosque University and collaborating companies.
-            Connect with experts from different sectors, expand your network,
-            and stay informed about the latest trends and opportunities. Access
-            premium resources: Browse through our extensive library of
-            resources, including articles, research papers, and success stories,
-            to broaden your knowledge and develop an innovative entrepreneurial
-            mindset.
+          <p class="mb-0 mt-4" id="p">
+            Synchronization of book inventory in a bookstore using Excel files.
           </p>
+          <p class="mb-0 mt-2" id="p">  
+            Boston LC bookstore has a large variety of books, and they need to
+            keep the inventory updated in a database. Currently, they receive
+            information about the books in Excel files containing details such
+            as title, author, category, price, etc. However, the company wants
+            to have this virtual synchronization. The challenge is to process
+            and synchronize these Excel files with a database of books. Since
+            the current process involves manually copying and pasting data from
+            Excel into the database, which is error prone and time consuming.
+            For this reason, Table Master will develop a project that automates
+            this process. The project will be developed through an application
+            that takes and processes the Excel files provided by them, extracts
+            the important information from each workbook and automatically loads
+            it into the library's database. This project will require knowledge
+            of file processing, data extraction, database management and
+            synchronization to ensure that the library's inventory is up to
+            date.</p>
         </div>
       </div>
     </div>
