--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -41,46 +41,19 @@
         {% if user.is_authenticated %}
         <ul class="menu">
           <li>----</li>
-          <li class="logo"><a href="{% url 'backend' %}">Graduate System</a></li>
+          <li class="logo"><a href="{% url 'backend' %}">Table Master</a></li>
 
           <li class="item"><a href="{% url 'backend' %}">
             <i id="a" class="fas fa-home"></i>&nbsp;&nbsp;Home</a></li>
-
-          <li class="item">
-            <a href="{% url 'egresado_list' %}">
-            <i id="a" class="fas fa-user-friends"></i>&nbsp;&nbsp;Graduates</a>
-          </li>
-          <li class="item has-submenu">
-            <a id="a" tabindex="0">Academic training</a>
-            <ul class="submenu">
-              <li class="subitem"><a href="{% url 'pregrado_list' %}">Undergraduate</a></li>
-              <li class="subitem"><a href="{% url 'facultad_list' %}">School</a></li>
-              <li class="subitem"><a href="{% url 'institucion_list' %}">Institution</a></li>
-              <li class="subitem"><a href="{% url 'posgrado_list' %}">Postgraduate</a></li>
-            </ul>
-          </li>
-          <li class="item has-submenu">
-            <a id="a" tabindex="0">Work History</a>
-            <ul class="submenu">
-              <li class="subitem"><a href="{% url 'laboral_list' %}">Work History</a></li>
-              <li class="subitem"><a href="{% url 'empresa_list' %}">Companies</a></li>
-            </ul>
-          </li>
-          <li class="item has-submenu">
-            <a id="a" tabindex="0">Residence</a>
-            <ul class="submenu">
-              <li class="subitem"><a href="{% url 'ciudad_list' %}">City</a></li>
-              <li class="subitem"><a href="{% url 'pais_list' %}">Country</a></li>
-            </ul>
-          </li>
+          <li class="item"><a href="{% url 'pais_list' %}">
+            &nbsp;&nbsp;Importer Tool</a></li>   
 
           <li class="item button2 secondary"><a href="/logout/" >Logout</a></li>
           <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
         {% else %}
         <ul class="menu">
-          <li class="logo"><a href="#">Graduate System</a></li>
-         
+          <li class="logo"><a href="#">Table Master</a></li>
           <li class="item button secondary"><a href="#" id="form-open">Log In</a></li>
           <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
