--- a/App/templates/App/pais_list.html
+++ b/App/templates/App/pais_list.html
@@ -5,9 +5,26 @@
 
 {% block content %}
 
+<br>
+<div class="post">   
+    <h1><a >Importer Excel Tool</a></h1>
+</div>
+<br>
+<div class="post"> 
+    <label class="control-label mr-2" for="fichero1">Add Excel Document</label>
+    <div class="controls row">
+      <input id="fichero1" type="file" style="display:none" name="fichero1">
+      <div class="input-append">
+        <input id="falso1" class="input-xlarge" type="text">
+        <a class="btn btn-file"><i class="fa fa-folder-open-o"></i> Choose</a>
+        <a class="btn btn-success" style="background-color:green"><i class=""></i> Process</a>
+      </div>
+    </div>
+</div>
+
 <div class="table-container-view">
     <div class="post">   
-        <h1><a >Country</a></h1>
+        <h1><a >Table</a></h1>
     </div>
     <table>
         <thead>
